added second p tag

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <p class="testing">hello world</p>
+    <p class="testing2">Second like of text here</p>
   </body>
 </html>
